objects/APTS_Configurator_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APTS_ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ABB Location</label>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Configurator Mappings</relationshipLabel>
        <relationshipName>Configurator_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <label>BAL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CID__c</fullName>
        <label>CID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configurator_Admin__c</fullName>
        <label>Configurator Admin</label>
        <referenceTo>APTS_Configurator_Admin__c</referenceTo>
        <relationshipLabel>Configurator Mappings</relationshipLabel>
        <relationshipName>Configurator_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configurator Mappings</relationshipLabel>
        <relationshipName>Configurator_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Related_Configurator_Manual_BU__c</fullName>
        <formula>APTS_Configurator_Admin__r.APTS_Manual_BU_Entry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Configurator Manual BU Entry</label>
        <type>Text</type>
    </fields>
    <label>Configurator Mapping</label>
    <listViews>
        <fullName>PGHV_Configurator_Mappings</fullName>
        <columns>NAME</columns>
        <columns>APTS_Configurator_Admin__c</columns>
        <columns>APTS_ABB_Location__c</columns>
        <columns>APTS_BAL_ID__c</columns>
        <columns>APTS_Product__c</columns>
        <columns>APTS_CID__c</columns>
        <columns>APTS_Related_Configurator_Manual_BU__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Related_Configurator_Manual_BU__c</field>
            <operation>equals</operation>
            <value>PGHV</value>
        </filters>
        <label>PGHV Configurator Mappings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000000000}</displayFormat>
        <label>Configurator Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurator Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>